--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <h1>Mama i can code now</h1>
     <p>more pragraph</p>
     <p>Now im coder</p>
+    <img src="tiger.jpg" alt="">
+    <img src="panda.jpg" alt="">
 </body>
 </html>
