--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <h1>Mama i can code now</h1>
     <p>more pragraph</p>
     <p>Now im coder</p>
+    <h5>look mama i can write a blog</h5>
     <img src="tiger.jpg" alt="">
     <img src="panda.jpg" alt="">
     <h3>i love you and i will marry yoy please dont leve mee</h3>
+    <div class="">
+        <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis repudiandae eligendi dolor, illo atque soluta aut reprehenderit. Mollitia quia, aliquam, corrupti placeat doloremque porro et recusandae esse temporibus voluptatem totam.</h3>
+    </div>
 </body>
 </html>
